@@ -11,7 +11,7 @@
  * http://opensource.org/licenses/osl-3.0.php
  *
  *  @author Pavel Strejček <pavel.strejcek@brainweb.cz>
- *  @copyright  2016-2017 Pavel Strejček
+ *  @copyright  2016-2018 Pavel Strejček
  *  @license    http://opensource.org/licenses/osl-3.0.php  Open Software License (OSL 3.0)
  */
 
