@@ -9,7 +9,7 @@
 * http://opensource.org/licenses/osl-3.0.php
 *
 *  @author Pavel Strejček <pavel.strejcek@brainweb.cz>
-*  @copyright  2016 Pavel Strejček
+*  @copyright  2016-2018Pavel Strejček
 *  @license    http://opensource.org/licenses/osl-3.0.php  Open Software License (OSL 3.0)
 *}
 
