@@ -1,3 +1,4 @@
+2017-02-13 v1.0.12 compatibility for PrestaShop version 1.6.1.18
 2017-10-01 v1.0.11 compatibility for PrestaShop version 1.6.1.17
 2017-08-08 v1.0.10 compatibility for PrestaShop version 1.6.1.16
 2017-07-08 v1.0.9 compatibility for PrestaShop version 1.6.1.15
